/*
 * $Id: ChangeLog,v 1.1800 2003/11/30 18:11:40 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-11-30 18:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
   * tests/pp_harb.ch
     * Replaced all Alert()s on erros with code to raise errors.
     * Restructured code to catch and forward errors.
     * Many optimizations

2003-11-30 16:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! utils/hbmake/hbmake.prg
  ! utils/tmake/tmake.prg
    % minor fix + restore an importante Field from makefile on edit mode

2003-11-30 13:30 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/config/dos/watcom.cf
  * xharbour/config/w32/watcom.cf
    * warning level a little bit increased

  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
    * some small changes to avoids increased warnings in Open Watcom

  * xharbour/include/hbsetup.h
    + two new macros HB_EXTERN_BEGIN and HB_EXTERN_END

  * xharbour/include/classes.h
  * xharbour/include/hbapi.h
  * xharbour/include/hbapicdp.h
  * xharbour/include/hbapierr.h
  * xharbour/include/hbapifs.h
  * xharbour/include/hbapigt.h
  * xharbour/include/hbapiitm.h
  * xharbour/include/hbapilng.h
  * xharbour/include/hbapirdd.h
  * xharbour/include/hbcomp.h
  * xharbour/include/hbdate.h
  * xharbour/include/hbdbf.h
  * xharbour/include/hbdbferr.h
  * xharbour/include/hbdbsort.h
  * xharbour/include/hberrors.h
  * xharbour/include/hbexprop.h
  * xharbour/include/hbfast.h
  * xharbour/include/hbhash.h
  * xharbour/include/hbinit.h
  * xharbour/include/hbmacro.h
  * xharbour/include/hbmath.h
  * xharbour/include/hbpp.h
  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrdddbf.h
  * xharbour/include/hbrdddbt.h
  * xharbour/include/hbrdddel.h